--- a/MoviePhile/Base.lproj/Main.storyboard
+++ b/MoviePhile/Base.lproj/Main.storyboard
@@ -30,24 +30,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65P-SI-wnh">
-                                <rect key="frame" x="127" y="83" width="347" height="30"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="lYP-0q-Hkg"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Genre" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bnQ-cN-i2Q">
-                                <rect key="frame" x="127" y="121" width="162" height="30"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="8Ft-Pb-NeG"/>
-                                </connections>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kpp-5b-4oI">
                                 <rect key="frame" x="312" y="121" width="162" height="30"/>
                                 <animations/>
@@ -58,7 +40,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uC3-cp-ild">
-                                <rect key="frame" x="127" y="159" width="347" height="30"/>
+                                <rect key="frame" x="127" y="166" width="347" height="30"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -67,7 +49,7 @@
                                 </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Any info about this movie..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yzp-zF-952">
-                                <rect key="frame" x="127" y="197" width="347" height="128"/>
+                                <rect key="frame" x="127" y="204" width="347" height="128"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -93,6 +75,22 @@
                                     <action selector="btnSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HhZ-Xn-tmN"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtn-nt-zjK">
+                                <rect key="frame" x="127" y="114" width="164" height="46"/>
+                                <animations/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Tsy-oN-LhD"/>
+                                </connections>
+                            </pickerView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65P-SI-wnh">
+                                <rect key="frame" x="127" y="76" width="347" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="lYP-0q-Hkg"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -100,7 +98,7 @@
                     <connections>
                         <outlet property="Title" destination="65P-SI-wnh" id="9BS-wh-mUv"/>
                         <outlet property="btnSave" destination="HBP-to-eh8" id="MzP-JF-RZQ"/>
-                        <outlet property="genre" destination="bnQ-cN-i2Q" id="g2e-0N-3Qm"/>
+                        <outlet property="genre" destination="gtn-nt-zjK" id="C9R-0T-z3x"/>
                         <outlet property="info" destination="Yzp-zF-952" id="twU-9j-gwN"/>
                         <outlet property="location" destination="uC3-cp-ild" id="wC1-jt-lCD"/>
                         <outlet property="name" destination="65P-SI-wnh" id="WRp-IZ-x0h"/>
@@ -110,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1488" y="297"/>
+            <point key="canvasLocation" x="1558" y="292"/>
         </scene>
         <!--My Movies-->
         <scene sceneID="wTS-Rx-hvA">
@@ -134,7 +132,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6mK-dG-7KC">
@@ -188,7 +186,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H6d-Th-Abm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="214" y="292"/>
+            <point key="canvasLocation" x="120" y="292"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
